--- a/src/pages/locations/[...slug].astro
+++ b/src/pages/locations/[...slug].astro
@@ -34,39 +34,41 @@ import { TEL, TEL_HREF, EMAIL } from '../../consts'
     <main>
         <BackBt label="Back to Locations" url="../locations/"/>
         
-        <div class="heading_ctnr squares_bg">
-            <div class="content reveal">
-
-                {location.data.completeAddress ? (
-                    <address>
-                        <LocationIcon/>
-                        <span set:html={location.data.completeAddress}></span>
-                    </address>
-                ) : ""}
-
-                <h1 set:html={location.data.mainHeading}></h1>
-
-                <p set:html={location.data.introText}></p>
+        <div class="flex_map_ctnr">
+            <div class="heading_ctnr squares_bg">
+                <div class="content reveal">
+    
+                    {location.data.completeAddress ? (
+                        <address>
+                            <LocationIcon/>
+                            <span set:html={location.data.completeAddress}></span>
+                        </address>
+                    ) : ""}
+    
+                    <h1 set:html={location.data.mainHeading}></h1>
+    
+                    <p set:html={location.data.introText}></p>
+                      
+                    <div class="contact_box_ctnr">
+                        <InfoBox />
+                    </div>
+                </div>
             </div>
-        </div>
+    
+            <div class="map reveal">
+                <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
+                
+                <div class="iframe_ctnr">
+                    <iframe src={location.data.mapEmbedSrc} width='100%' height='100%' style='border:0;' allowfullscreen='' loading='lazy' referrerpolicy='no-referrer-when-downgrade'></iframe>
+                </div>
 
-        <div class="map">
-            <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
-            
-            <div class="iframe_ctnr">
-                <iframe src={location.data.mapEmbedSrc} width='100%' height='100%' style='border:0;' allowfullscreen='' loading='lazy' referrerpolicy='no-referrer-when-downgrade'></iframe>
-            </div>
-        </div>
-
-        <div class="bottom_info">
-            <ul class="area_covered" set:html={location.data.areaCoveredBulletList.map(function(item) {
-                return '<li>' + item + '</li>';
-              })}>
-            <li class="intro">These are some of the areas where we can provide office cleaning services:</li>  
-            </ul>
-              
-            <div class="contact_box_ctnr">
-                <InfoBox />
+                <div class="bottom_info">
+                    <ul class="area_covered" set:html={location.data.areaCoveredBulletList.map(function(item) {
+                        return '<li>' + item + '</li>';
+                      })}>
+                    <li class="intro">These are some of the areas where we can provide office cleaning services:</li>  
+                    </ul>
+                </div>
             </div>
         </div>
 
