--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -30,37 +30,39 @@ const locations = (await getCollection('locations')).sort((a, b) => {
 
 <BaseLayout title={LOCATIONS_TITLE} description={LOCATIONS_DESCRIPTION} keywords={LOCATIONS_KEYWORDS} endContactSection="false">
     <main>
-        <div class="heading_ctnr squares_bg">
-            <div class="content reveal">
-                <h1 set:html={LOCATIONS_H1}></h1>
-
-                <p set:html={LOCATIONS_INTRO_DESCRIPTION}></p>
-            
-                <ul class="locations_list">
-                    {
-                        locations.map((location) => (
-                        <>
-                        <li class="reveal_interval01">
-                            <a href={`/locations/${location.slug}`} aria-label={`Read more about ${location.data.addressTitle}`}>
-                                {location.data.addressTitle}
-                            </a>
-                        </li>
-                        </>
-                        ))
-                    }
-                </ul>
+        <div class="flex_map_ctnr">
+            <div class="main heading_ctnr squares_bg">
+                <div class="content reveal">
+                    <h1 set:html={LOCATIONS_H1}></h1>
+    
+                    <p set:html={LOCATIONS_INTRO_DESCRIPTION}></p>
+                
+                    <ul class="locations_list">
+                        {
+                            locations.map((location) => (
+                            <>
+                            <li class="reveal_interval01">
+                                <a href={`/locations/${location.slug}`} aria-label={`Read more about ${location.data.addressTitle}`}>
+                                    {location.data.addressTitle}
+                                </a>
+                            </li>
+                            </>
+                            ))
+                        }
+                    </ul>
+                </div>
             </div>
-        </div>
-
-        <div class="general map">
-            <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
-
-            <div class="contact_box_ctnr reveal">
-                <InfoBox />
-            </div>
-            
-            <div class="iframe_ctnr">
-                <iframe width="100%" height="100%" title="The Clean Network Location map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/u/0/embed?mid=1SDs6anXFA77WaU50JTYDnjubQ8z2yho&ehbc=2E312F&noprof=1"></iframe>
+    
+            <div class="general map reveal">
+                <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
+    
+                <div class="contact_box_ctnr reveal">
+                    <InfoBox />
+                </div>
+                
+                <div class="iframe_ctnr">
+                    <iframe width="100%" height="100%" title="The Clean Network Location map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9933.259719850641!2d-0.13748112688602074!3d51.50743800460255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604ce37bbdb95%3A0x5120415568fd2d8b!2sCentral%20London%2C%20London%20SW1A%202DR%2C%20UK!5e0!3m2!1sen!2sbr!4v1710871676385!5m2!1sen!2sbr"></iframe>
+                </div>
             </div>
         </div>
 
