--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -1,40 +1,74 @@
 ---
+import { getCollection } from 'astro:content';
+
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
 import '../../styles/subpages.css'
+import '../../styles/locations.css'
 
 import ContactSection from "../../components/ContactSection.astro"
 import InfoBox from '../../components/InfoBox.astro';
+import BenefitsSection from '../../components/BenefitsSection.astro';
+import CTASection1 from '../../components/CTASection1.astro'
 
 import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H1, LOCATIONS_INTRO_DESCRIPTION } from "../../consts";
----
 
+const locations = (await getCollection('locations')).sort((a, b) => {
+    // Check if both items have an 'order' property
+    if (a.data.order !== undefined && b.data.order !== undefined) {
+        return a.data.order - b.data.order; // Sort by 'order' if both have it
+    } else if (a.data.order !== undefined) {
+        return -1; // 'a' has 'order', but 'b' doesn't, so 'a' comes first
+    } else if (b.data.order !== undefined) {
+        return 1; // 'b' has 'order', but 'a' doesn't, so 'b' comes first
+    } else {
+        // Both 'a' and 'b' don't have 'order', fallback to sorting by 'title'
+        return a.data.addressTitle.localeCompare(b.data.addressTitle);
+    }
+});
+---
 
 <BaseLayout title={LOCATIONS_TITLE} description={LOCATIONS_DESCRIPTION} keywords={LOCATIONS_KEYWORDS} endContactSection="false">
     <main>
-        <div class="heading_ctnr squares_bg">
-            <div class="content reveal">
-                <h1 set:html={LOCATIONS_H1}></h1>
-
-                <p set:html={LOCATIONS_INTRO_DESCRIPTION}></p>
+        <div class="flex_map_ctnr">
+            <div class="main heading_ctnr squares_bg">
+                <div class="content reveal">
+                    <h1 set:html={LOCATIONS_H1}></h1>
+    
+                    <p set:html={LOCATIONS_INTRO_DESCRIPTION}></p>
                 
-                <!-- <div class="component_ctnr">
-                    <MapSwitch/>
-                </div> -->
+                    <ul class="locations_list">
+                        {
+                            locations.map((location) => (
+                            <>
+                            <li class="reveal_interval01">
+                                <a href={`/locations/${location.slug}`} aria-label={`Read more about ${location.data.addressTitle}`}>
+                                    {location.data.addressTitle}
+                                </a>
+                            </li>
+                            </>
+                            ))
+                        }
+                    </ul>
+                </div>
+            </div>
+    
+            <div class="general map reveal">
+                <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
+    
+                <div class="contact_box_ctnr reveal">
+                    <InfoBox />
+                </div>
+                
+                <div class="iframe_ctnr">
+                    <iframe width="100%" height="100%" title="The Clean Network Location map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28093.95028481144!2d-0.15260080535007794!3d51.509953154330304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604ce37bbdb95%3A0x5120415568fd2d8b!2sCentral%20London%2C%20London%20SW1A%202DR%2C%20UK!5e0!3m2!1sen!2sbr!4v1710877664464!5m2!1sen!2sbr"></iframe>
+                </div>
             </div>
         </div>
 
-        <div class="map">
-            <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
+        <BenefitsSection type="locations"/>
 
-            <div class="contact_box_ctnr reveal">
-                <InfoBox />
-            </div>
-            
-            <div class="iframe_ctnr">
-                <iframe width="100%" height="100%" title="The Clean Network Location map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.4890261846244!2d-0.08541909999999998!3d51.52258979999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761caefea868c7%3A0x2f921afb71cd76e2!2s6-8%20Bonhill%20St%2C%20London%20EC2A%204BX%2C%20UK!5e0!3m2!1sen!2sbr!4v1704802091222!5m2!1sen!2sbr"></iframe>
-            </div>
-        </div>
+        <CTASection1/>
 
         <div class="contact_ctnr">
             <ContactSection/>
@@ -44,33 +78,14 @@ import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H
 
 <style>
     .map {
-        height: 100vh;
-        height: 100lvh;
+        /* height: 55vh;
+        height: 55lvh;
         background-color: var(--light-d);
-        position: relative;
         border-top: 0.3rem solid var(--light);
         /* box-shadow: 0 -1rem 3rem -1rem var(--light-b); */
-        background-image: url(/textures/dot-grid.jpg);
+        /* background-image: url(/textures/dot-grid.jpg);
         background-image: image-set(url(/textures/dot-grid.jpg) , url(/textures/dot-grid.webp) );
-        background-size: 40rem;
-    }
-
-    .map::after {
-        content: "Loading map...";
-        position: absolute;
-        inset: 0;
-        margin: auto;
-        z-index: 1;
-        display: inline-block;
-        color: var(--primary-a);
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        align-items: center;
-        font-size: 1.8rem;
-        text-transform: uppercase;
-        font-weight: 400;
-        letter-spacing: 0.2rem;
+        background-size: 40rem; */
     }
 
     .contact_box_ctnr {
@@ -96,7 +111,6 @@ import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H
     }
 
     .contact_ctnr {
-        box-shadow: 0 -10rem 12rem -7rem var(--light-b);
         position: relative;
     }
 
@@ -121,7 +135,6 @@ import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H
         .iframe_ctnr {
             border: 0.8rem solid var(--light);
             box-sizing: border-box;
-            height: calc(100% - var(--header-height));
         }
 
         .contact_box_ctnr {
