--- a/src/pages/locations/[...slug].astro
+++ b/src/pages/locations/[...slug].astro
@@ -58,7 +58,7 @@ import { TEL, TEL_HREF, EMAIL } from '../../consts'
                 <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
                 
                 <div class="iframe_ctnr">
-                    <iframe src={location.data.mapEmbedSrc} width='100%' height='100%' style='border:0;' allowfullscreen='' loading='lazy' referrerpolicy='no-referrer-when-downgrade'></iframe>
+                    <iframe src={location.data.mapEmbedSrc} width='100%' height='100%' style='border:0;' allowfullscreen='' loading='lazy' referrerpolicy='no-referrer-when-downgrade' title="Location map"></iframe>
                 </div>
 
                 <div class="bottom_info">
