--- a/src/components/CTASection1.astro
+++ b/src/components/CTASection1.astro
@@ -1,10 +1,8 @@
 ---
-
-
 import { TEL, TEL_HREF, EMAIL } from '../consts'
 ---
 
-<section class="content_panel cta">
+<section class="content_panel invite">
     <div class="content">
         <p>To discuss your office cleaning service, contact us on <a href={`tel:${TEL_HREF}`}>{TEL}</a> or <a href=`mailto:${EMAIL}`>{EMAIL}</a> or click below for a free quote.</p>
 
