--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -37,7 +37,7 @@
             </p>
             </form> -->
 
-            <iframe src="https://forms.monday.com/forms/embed/2b8278e5846d1e40576e7f26f8886cc2?r=euc1" width="650" height="500" style="border: 0; box-shadow: 5px 5px 56px 0px rgba(0,0,0,0.25);" title="contact form"></iframe>
+            <iframe src="https://forms.monday.com/forms/embed/2b8278e5846d1e40576e7f26f8886cc2?r=euc1" width="650" height="500" style="border: 0; box-shadow: 5px 5px 56px 0px rgba(0,0,0,0.25);" title="contact form" loading="lazy"></iframe>
     </div>
 
     <!-- <script>
