--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -61,7 +61,7 @@ const locations = (await getCollection('locations')).sort((a, b) => {
                 </div>
                 
                 <div class="iframe_ctnr">
-                    <iframe width="100%" height="100%" title="The Clean Network Location map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28093.95028481144!2d-0.15260080535007794!3d51.509953154330304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604ce37bbdb95%3A0x5120415568fd2d8b!2sCentral%20London%2C%20London%20SW1A%202DR%2C%20UK!5e0!3m2!1sen!2sbr!4v1710877664464!5m2!1sen!2sbr" title="Location map"></iframe>
+                    <iframe width="100%" height="100%" title="The Clean Network Location map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28093.95028481144!2d-0.15260080535007794!3d51.509953154330304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604ce37bbdb95%3A0x5120415568fd2d8b!2sCentral%20London%2C%20London%20SW1A%202DR%2C%20UK!5e0!3m2!1sen!2sbr!4v1710877664464!5m2!1sen!2sbr" title="Location map" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
